force-app/main/default/objects/X7S_Event_Translation__c/X7S_Event_Translation__c.object-meta.xml
<CustomObject>
    <description>Object to support Event Translation records as part of the Events accelerator from 7Summits.</description>
    <label>7S Event Translation</label>
    <nameField>
        <label>7S Event Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Event Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>