force-app/main/default/objects/X7S_Event_Translation__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent Event</label>
    <referenceTo>X7S_Event__c</referenceTo>
    <relationshipLabel>7S Event Translations</relationshipLabel>
    <relationshipName>X7S_Event_Translation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>